--- a/citas.html
+++ b/citas.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <title>POS</title>
+    <title>DafiSalud - Reservar Citas</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -20,37 +20,48 @@
 </head>
 
 <body>
-    <!-- MENU -->
-    <nav class="navbar navbar-expand-sm bg-info navbar-light">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="usuario.html">SOAT</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="oncologia.html">ONCOLOGIA</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="paciente.html">PACIENTE</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="cliente.html">VEHICULAR</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="viajes.html">VIAJES</a>
-            </li>
-        </ul>
-    </nav>
     <div class="container">
-        <h1>SISTEMA DE SEGURO</h1>
-        <div class="row">
+        <h1 class="mt-3">RESERVAR CITAS</h1>
+        <div class="mt-5 d-flex justify-content-between">
+          <div class="d-flex">
+            <div>
+              <p class="font-weight-bold">Nombre:</p>
+              <p class="border border-dark">Ramero</p>
+              <p class="font-weight-bold">Apellidos:</p>
+              <p class="border border-dark">Inocentavez</p>
+              <p class="font-weight-bold">Sexo:</p>
+              <p class="border border-dark">Masculino</p>
+              <p class="font-weight-bold">Documento de identidad:</p>
+              <p class="border border-dark">76449823</p>
+              <p class="font-weight-bold">Fecha de nacimiento:</p>
+              <p class="border border-dark">23/05/90</p>
+              <p class="font-weight-bold">Celular:</p>
+              <p class="border border-dark">987 764 654</p>
+              <p class="font-weight-bold">E-mail:</p>
+              <p class="border border-dark">ino@gmail.com</p>
+              <p class="font-weight-bold">Especialidad:</p>
+              <p class="border border-dark">Pediatría</p>
+            </div>
+          </div>
+
+          <div class="border-left border-dark"></div>
+
+          <div>
+            <form>
+              <div>
+                <input type="date" name="fechacita" id="fechacita" required>
+              </div>
+              <h3 class="mt-4">Horario a programar</h3>
+              <div class="p-4 my-3 border border-dark font-si">
+                <div class="border border-dark mb-2">0000--00--00</div>
+                <input type="time" name="horacita" id="horacita">
+              </div>
+              <button class="btn btn-primary mr-3" type="submit">Guardar</button>
+              <button class="btn btn-secondary" type="button">Cancelar</button>
+            </form>
+          </div>
+        </div>
+        <!-- <div class="row">
             <button type="button" class="btn btn-info m-1"
             data-toggle="modal" 
             data-target="#myModal"
@@ -59,19 +70,17 @@
             <button type="button"
              class="btn btn-primary m-1" 
              onclick="listar()">BUSCAR</button>
-        </div>
+        </div> -->
         <div class="row">
             <!-- TABLA DE PACIENTES -->
-            <table class="table table-bordered" id="tablaPaciente">
+            <!-- <table class="table table-bordered" id="tablaPaciente">
                 <thead>
                     <tr>
                         <td>ID PACIENTE</td>
                         <td>NOMBRES</td>
+                        <td>APELLIDOS</td>
                         <td>DNI</td>
-                        <td>DIRECCION</td>
-                        <td>ESPECIALIDAD</td>
                         <td>CITAS</td>
-                        <td>ESTADO</td>
                         
                     </tr>
                 </thead>
@@ -79,9 +88,10 @@
                 <tbody id="dataPaciente">
 
                 </tbody>
-            </table>
+            </table> -->
         </div>
     </div>
+    <script src="citas.js"></script>
 </body>
 
 </html>
@@ -89,33 +99,33 @@
 
 
 
-<!--MODAL USUARIO-->
-<div class="modal" id="myModal">
+<!-- MODAL USUARIO-->
+<!-- <div class="modal" id="myModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">PRODUCTO FORM</h4>
+                <h4 class="modal-title">AGENDAR CITA</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <form id="MyForm">
                     
                     <div class="form-group" >
-                        <label for="txtIdPaciente">IDPACIENTE:</label>
+                        <label for="txtIdPaciente">ID PACIENTE:</label>
                         <input type="text" class="form-control" id="txtIdPaciente" 
                             value="0" readonly>
                     </div>
                     <div class="form-group">
-                        <label for="txtNombres">NOMBRES Y APELLIDOS:</label>
+                        <label for="txtNombres">NOMBRES:</label>
+                        <input type="text" class="form-control" id="txtNombres" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="txtNombres">APELLIDOS:</label>
                         <input type="text" class="form-control" id="txtNombres" required>
                     </div>
                     <div class="form-group">
                         <label for="txtDni">DNI:</label>
                         <input type="number" class="form-control" id="txtDni" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="txtDireccion">DIRECCION:</label>
-                        <input type="text" class="form-control" id="txtDireccion" required>
                     </div>
                     <div class="form-group">
                         <label for="txtEspecialidad">ESPECIALIDAD:</label>
@@ -163,7 +173,7 @@
 
     </div>
 
-</div>
+</div> -->
 
 
 <script src="paciente.js" type="text/javascript"></script>
