--- a/index.html
+++ b/index.html
@@ -1,30 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>DafiSalud - Ingreso al Sistema</title>
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
 </head>
 <body>
     <form action="" id="MyForm">
-        <h1 class="title">Login</h1>
+        <h1 class="title">Registra tus datos</h1>
         <label>
-            <i class="fa-solid fa-user"></i>
-            <input placeholder="username" type="text" id="username" required>
+          <i class="fa-solid fa-user"></i>
+          <input placeholder="Nombres" type="text" id="nombres" required>
         </label>
         <label>
-            <i class="fa-solid fa-lock"></i>
-            <input placeholder="password" type="password" id="password" required>
+          <i class="fa-solid fa-user"></i>
+          <input placeholder="Apellidos" type="text" id="apellidos" required>
         </label>
-        <a href="#" class="link">Forgot your password?</a>
-
-        <button id="button" onclick="location.href='usuario.html'">Login</button>
+        <label>
+          <div class="d-flex justify-content-between">
+            <i class="fa-solid fa-user-group"></i>
+            <input type="radio" name="genero" value="masculino" required> Masculino
+            <input type="radio" name="genero" value="femenino" required> Femenino
+          </div>
+        </label>
+        <label>
+          <i class="fa-solid fa-id-badge"></i>
+          <input placeholder="DNI" type="number" id="dni" required>
+        </label>
+        <label>
+          <div class="d-flex justify-content-between">
+            <i class="fa-solid fa-calendar"></i>
+            <input type="date" id="fechnacimiento" required>
+          </div>
+        </label>
+        <label>
+          <i class="fa-solid fa-mail-bulk"></i>
+          <input placeholder="Correo electrónico" type="email" id="email" required>
+        </label>
+        <label>
+          <i class="fa-solid fa-phone"></i>
+          <input placeholder="Teléfono" type="tel" id="telefono" required>
+        </label>
+        <label>
+          <i class="fa-solid fa-user-doctor"></i>
+          <p>Especialidad: </p>
+          <select type='text' class="form-control" id="especialidad" required>
+            <option>Alergología</option>
+            <option>Cardiología</option>
+            <option>Dermatología</option>
+            <option>Ecografía</option>
+            <option>Endocrinología</option>
+            <option>Gastroenterología</option>
+            <option>Medicina General</option>
+            <option>Medicina Interna</option>
+            <option>Neumología</option>
+            <option>Neurología</option>
+            <option>Nutrición</option>
+            <option>Odontología</option>
+            <option>Oftalmología</option>
+            <option>Otorrinolaringología</option>
+            <option>Pediatría</option>
+            <option>Urología</option>
+        </select>
+        </label>
+        <button id="btnregistro" onclick="location.href='sistema.html'">Registrar</button>
     </form>
-    
-    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
