sistema and citas added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <option>Urología</option>
         </select>
         </label>
-        <button id="btnregistro" onclick="location.href='sistema.html'">Registrar</button>
+        <button id="btnregistro" onclick="location.href='./pages/sistema.html'">Registrar</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
     <script src="index.js"></script>
