--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <i class="fa-solid fa-phone"></i>
           <input placeholder="Teléfono" type="tel" id="telefono" required>
         </label>
-        <label>
+        <!-- <label>
           <i class="fa-solid fa-user-doctor"></i>
           <p>Especialidad: </p>
           <select type='text' class="form-control" id="especialidad" required>
@@ -64,7 +64,7 @@
             <option>Pediatría</option>
             <option>Urología</option>
         </select>
-        </label>
+        </label> -->
         <button id="btnregistro" onclick="location.href='./pages/sistema.html'">Registrar</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
