--- a/pages/sistema.html
+++ b/pages/sistema.html
@@ -37,7 +37,7 @@
               <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">DAFI</span> </a>
                 <div class="nav_list"> 
                   <a href="#" class="nav_link active"> <i onclick="cargarHTML('citas.html')" class='bx bx-grid-alt nav_icon'></i> <span class="nav_name" onclick="cargarHTML('citas.html')">RESERVAR CITAS</span> </a> 
-                  <a href="#" class="nav_link"> <i onclick="cargarHTML('reprogramacion.html')" class='bx bx-user nav_icon'></i> <span class="nav_name" onclick="cargarHTML('prueba.html')">REPROGRAMACIÓN</span> </a> 
+                  <a href="#" class="nav_link"> <i onclick="cargarHTML('reprogramacion.html')" class='bx bx-user nav_icon'></i> <span class="nav_name" onclick="cargarHTML('reprogramacion.html')">REPROGRAMACIÓN</span> </a> 
                   <a href="#" class="nav_link"> <i onclick="cargarHTML('documentacion.html')" class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name" onclick="cargarHTML('documentacion.html')">DOCUMENTACIÓN</span> </a> 
                   <a href="#" class="nav_link"> <i onclick="cargarHTML('medicamentos.html')" class='bx bx-bookmark nav_icon'></i> <span class="nav_name" onclick="cargarHTML('medicamentos.html')">MEDICAMENTOS</span> </a> 
                   <a href="#" class="nav_link"> <i onclick="cargarHTML('citasprogramadas.html')" class='bx bx-folder nav_icon'></i> <span class="nav_name" onclick="cargarHTML('citasprogramadas.html')">CITAS PROGRAMADAS</span> </a>  
