--- a/pages/reprogramacion.html
+++ b/pages/reprogramacion.html
@@ -7,6 +7,49 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Reprogramación</h1>
+  <h1 class="mt-3 pt-3">Reprogramación</h1>
+  <div class="border border-1 border-primary p-5 row">
+    <div class="col">
+      <div class="form-group">
+        <label class="form-label">Nombre:</label>
+        <input class="form-control" type="text" value="Jean Pool">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Apellidos:</label>
+        <input class="form-control" type="text" value="Rafael Jaramillo">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Sexo:</label>
+        <input class="form-control" type="text" value="Masculino">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Documento de Identidad:</label>
+        <input class="form-control" type="text" value="72541294">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Fecha de Nacimiento:</label>
+        <input class="form-control" type="text" value="08/08/1995">
+      </div>
+    </div>
+    <div class="col">
+      <div class="form-group">
+        <label class="form-label">Especialidad:</label>
+        <input class="form-control" type="text" value="Dermatología">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Fecha:</label>
+        <input class="form-control" type="text" value="05/11/2023">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Horario de Cita:</label>
+        <input class="form-control" type="text" value="15:30">
+      </div>
+      <div class="mt-5">
+        <button class="btn btn-primary px-4 py-2">Guardar</button>
+        <button class="btn btn-secondary px-4 py-2">Cancelar</button>
+      </div>
+    </div>
+  </div>
+  <button class="btn btn-primary mt-3 text-center">Cerrar</button>
 </body>
 </html>
