--- a/pages/documentacion.html
+++ b/pages/documentacion.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Documentación</title>
 </head>
 <body>
-  <h1>Documentación</h1>
+  <h1 class="mt-3 pt-3">Documentación</h1>
+  <div class="border border-1 border-primary p-5 row">
+    <div class="row-cols-2">
+      <div class="form-group">
+        <label class="form-label">Paciente:</label>
+        <input class="form-control" type="text" value="Jean Pool">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Doctora:</label>
+        <input class="form-control" type="text" value="Maria Luisa">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Especialidad:</label>
+        <input class="form-control" type="text" value="Dermatología">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Derivación:</label>
+        <input class="form-control" type="text" value="Laboratorio">
+      </div>
+    </div>
+    <textarea class="bxs-area" cols="30" rows="10"></textarea>
+  </div>
+  <button class="btn btn-secondary">Cerrar</button>
 </body>
 </html>
