inputs documentacion and reprogramacion updated

--- a/pages/documentacion.html
+++ b/pages/documentacion.html
@@ -12,19 +12,19 @@
     <div class="row-cols-2">
       <div class="form-group">
         <label class="form-label">Paciente:</label>
-        <input class="form-control" type="text" value="Jean Pool">
+        <input class="form-control" type="text" value="Jean Pool" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Doctora:</label>
-        <input class="form-control" type="text" value="Maria Luisa">
+        <input class="form-control" type="text" value="Maria Luisa" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Especialidad:</label>
-        <input class="form-control" type="text" value="Dermatología">
+        <input class="form-control" type="text" value="Dermatología" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Derivación:</label>
-        <input class="form-control" type="text" value="Laboratorio">
+        <input class="form-control" type="text" value="Laboratorio" readonly>
       </div>
     </div>
     <textarea class="bxs-area" cols="30" rows="10"></textarea>
