--- a/pages/reprogramacion.html
+++ b/pages/reprogramacion.html
@@ -12,23 +12,23 @@
     <div class="col">
       <div class="form-group">
         <label class="form-label">Nombre:</label>
-        <input class="form-control" type="text" value="Jean Pool">
+        <input class="form-control" type="text" value="Jean Pool" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Apellidos:</label>
-        <input class="form-control" type="text" value="Rafael Jaramillo">
+        <input class="form-control" type="text" value="Rafael Jaramillo" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Sexo:</label>
-        <input class="form-control" type="text" value="Masculino">
+        <input class="form-control" type="text" value="Masculino" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Documento de Identidad:</label>
-        <input class="form-control" type="text" value="72541294">
+        <input class="form-control" type="text" value="72541294" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Fecha de Nacimiento:</label>
-        <input class="form-control" type="text" value="08/08/1995">
+        <input class="form-control" type="text" value="08/08/1995" readonly>
       </div>
     </div>
     <div class="col">
