--- a/pages/reprogramacion.html
+++ b/pages/reprogramacion.html
@@ -1,34 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reprogramación</title>
+    <title>DafiSalud - Reprogramación</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/sistema.css">
 </head>
-<body>
-  <h1 class="mt-3 pt-3">Reprogramación</h1>
+<body id="body-pd">
+    <header class="header d-flex justify-content-between" id="header">
+        <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i></div>
+        <div class="d-flex align-items-center">
+          <div class="mr-5 d-flex header_img">
+            <img src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Imagen de Paciente">
+          </div>
+          <p class="text-white mb-0 mr-5 h5">Enrique Guzman Chavez</p>
+        </div>
+    </header>
+    <div class="l-navbar" id="nav-bar">
+        <nav class="nav">
+            <div> 
+              <a href="sistema.html" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">DAFI</span> </a>
+                <div class="nav_list"> 
+                  <a href="citas.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">RESERVAR CITAS</span> </a> 
+                  <a href="reprogramacion.html" class="nav_link active"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">REPROGRAMACIÓN</span> </a> 
+                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a> 
+            </div> <a href="../index.html" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">Cerrar Sesión</span> </a>
+        </nav>
+    </div>
+    <!--Container Main start-->
+    <div id="seccionCargada">
+        <h1 class="mt-3 pt-3">Reprogramación</h1>
   <div class="border border-1 border-primary p-5 row">
     <div class="col">
       <div class="form-group">
         <label class="form-label">Nombre:</label>
-        <input class="form-control" type="text" value="Jean Pool" readonly>
+        <input class="form-control" type="text" id="nombres" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Apellidos:</label>
-        <input class="form-control" type="text" value="Rafael Jaramillo" readonly>
+        <input class="form-control" type="text" id="apellidos" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Sexo:</label>
-        <input class="form-control" type="text" value="Masculino" readonly>
+        <input class="form-control" type="text" id="genero" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Documento de Identidad:</label>
-        <input class="form-control" type="text" value="72541294" readonly>
+        <input class="form-control" type="text" id="dni" readonly>
       </div>
       <div class="form-group">
         <label class="form-label">Fecha de Nacimiento:</label>
-        <input class="form-control" type="text" value="08/08/1995" readonly>
+        <input class="form-control" type="text" id="fechnacimiento" readonly>
       </div>
     </div>
     <div class="col">
@@ -51,5 +87,10 @@
     </div>
   </div>
   <button class="btn btn-primary mt-3 text-center">Cerrar</button>
+    </div>
+    <!--Container Main end-->
+    <script src="../js/sistema.js" type="text/javascript"></script>
+    <script src="../js/sistema2.js" type="text/javascript"></script>
+    <script src="../js/reprogramacion.js" type="text/javascript"></script>
 </body>
 </html>
