input especialidad updated

--- a/pages/citas.html
+++ b/pages/citas.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="dep">
                   <form >
-                    <img alt="pascienteimg" src="../pascienteimg.jpg">
+                    <img alt="pascienteimg" src="../Pascienteimg.jpg">
                     <p class="font-weight-bold">E-mail:</p>
                     <p class="border border-dark" id="email"></p>
                     <label for="sedes" class="font-weight-bold">Sedes</label><br>
