input name perfil added to documentacion.html and reprogramacion.html

--- a/pages/documentacion.html
+++ b/pages/documentacion.html
@@ -27,7 +27,7 @@
           <div class="mr-5 d-flex header_img">
             <img src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Imagen de Paciente">
           </div>
-          <p class="text-white mb-0 mr-5 h5"></p>
+          <p class="text-white mb-0 mr-5 h5" id="nombrecompleto"></p>
         </div>
     </header>
     <div class="l-navbar" id="nav-bar">
