storage for citas added

--- a/pages/reprogramacion.html
+++ b/pages/reprogramacion.html
@@ -37,7 +37,8 @@
                 <div class="nav_list"> 
                   <a href="citas.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">RESERVAR CITAS</span> </a> 
                   <a href="reprogramacion.html" class="nav_link active"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">REPROGRAMACIÓN</span> </a> 
-                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a> 
+                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a>
+                  <a href="citasprogramadas.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">MIS CITAS</span> </a>
             </div> <a href="../index.html" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">Cerrar Sesión</span> </a>
         </nav>
     </div>
@@ -82,13 +83,12 @@
       </div>
       <div class="mt-5">
         <button class="btn btn-primary px-4 py-2">Guardar</button>
-        <button class="btn btn-secondary px-4 py-2">Cancelar</button>
       </div>
     </div>
   </div>
-  <button class="btn btn-primary mt-3 text-center">Cerrar</button>
     </div>
     <!--Container Main end-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
     <script src="../js/sistema.js" type="text/javascript"></script>
     <script src="../js/sistema2.js" type="text/javascript"></script>
     <script src="../js/reprogramacion.js" type="text/javascript"></script>
