--- a/pages/citas.html
+++ b/pages/citas.html
@@ -38,7 +38,8 @@
                 <div class="nav_list"> 
                   <a href="citas.html" class="nav_link active"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">RESERVAR CITAS</span> </a> 
                   <a href="reprogramacion.html" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">REPROGRAMACIÓN</span> </a> 
-                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a> 
+                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a>
+                  <a href="citasprogramadas.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">MIS CITAS</span> </a>
             </div> <a href="../index.html" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">Cerrar Sesión</span> </a>
         </nav>
     </div>
@@ -84,7 +85,7 @@
                     <p class="border border-dark" id="email"></p>
                     <label for="sedes" class="font-weight-bold">Sedes</label><br>
                     <select name="sedes" id="sedes" class="border border-dark" onchange="changeForm()">
-                      <option value="Escoger Sede" class="border border-dark">Escoger Sede</option>
+                      <option value="Escoger Sede" class="border border-dark" disabled>Escoger Sede</option>
                       <option value="San Miguel" class="border border-dark">San Miguel</option>
                       <option value="Surco" class="border border-dark">Surco</option>
                       <option value="La Molina" class="border border-dark">La Molina</option>
@@ -94,7 +95,7 @@
                     <div id="especialidadForm">
                       <label for="lang" class="font-weight-bold">Especialidad</label><br>
                       <select name="Especialidad" id="lang" class="border border-dark">
-                        <option value="Sin Especialidad" class="border border-dark">Sin Especialidad</option>
+                        <option value="Sin Especialidad" class="border border-dark" disabled>Sin Especialidad</option>
                       </select>
                     </div>
                   </form>
@@ -109,11 +110,9 @@
                     </div>
                     <h3 class="mt-4">Horario a programar</h3>
                     <div class="p-4 my-3 border border-dark font-si">
-                      <div class="border border-dark mb-2">0000--00--00</div>
                       <input type="time" name="horacita" id="horacita" />
                     </div>
-                    <button class="btn btn-primary mr-3" type="submit">Guardar</button>
-                    <button class="btn btn-secondary" type="button">Cancelar</button>
+                    <button class="btn btn-primary mr-3" type="submit" id="btnGuardar">Guardar</button>
                   </form>
                 </div>
               </div>
@@ -130,6 +129,7 @@
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
       <script src="../js/sistema.js" type="text/javascript"></script>
       <script src="../js/sistema2.js" type="text/javascript"></script>
       <script src="../js/citas.js" type="text/javascript"></script>
