--- a/pages/citasprogramadas.html
+++ b/pages/citasprogramadas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>DafiSalud - Documentación</title>
+    <title>DafiSalud - Mis Citas</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
@@ -37,40 +37,55 @@
                 <div class="nav_list"> 
                   <a href="citas.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name" onclick="cargarHTML('citas.html')">RESERVAR CITAS</span> </a> 
                   <a href="reprogramacion.html" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name" onclick="cargarHTML('reprogramacion.html')">REPROGRAMACIÓN</span> </a> 
-                  <a href="documentacion.html" class="nav_link active"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name" onclick="cargarHTML('documentacion.html')">DOCUMENTACIÓN</span> </a>
-                  <a href="citasprogramadas.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">MIS CITAS</span> </a>
+                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name" onclick="cargarHTML('documentacion.html')">DOCUMENTACIÓN</span> </a>
+                  <a href="citasprogramadas.html" class="nav_link active"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">MIS CITAS</span> </a>
             </div> <a href="../index.html" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">Cerrar Sesión</span> </a>
         </nav>
     </div>
     <!--Container Main start-->
     <div id="seccionCargada">
-      <h1 class="mt-3 pt-3">Documentación</h1>
+      <h1 class="mt-3 pt-3">Mis Citas</h1>
       <div class="border border-1 border-primary p-5 row">
-        <div class="row-cols-2">
-          <div class="form-group">
-            <label class="form-label">Paciente:</label>
-            <input class="form-control" type="text" id="nombres" readonly>
+        <div class="col-md-6">
+          <h3>Datos del Paciente</h3>
+          <div class="mb-3">
+            <label for="nombreCompleto">Nombre Completo:</label>
+            <input type="text" id="nombreCompleto" class="form-control" readonly>
           </div>
-          <div class="form-group">
-            <label class="form-label">Doctora:</label>
-            <input class="form-control" type="text" value="Maria Luisa" readonly>
+          <div class="mb-3">
+            <label for="dni">DNI:</label>
+            <input type="text" id="dni" class="form-control" readonly>
           </div>
-          <div class="form-group">
-            <label class="form-label">Especialidad:</label>
-            <input class="form-control" type="text" value="Dermatología" readonly>
-          </div>
-          <div class="form-group">
-            <label class="form-label">Derivación:</label>
-            <input class="form-control" type="text" value="Laboratorio" readonly>
+          <div class="mb-3">
+            <label for="telefono">Teléfono:</label>
+            <input type="text" id="telefono" class="form-control" readonly>
           </div>
         </div>
-        <textarea class="bxs-area" cols="30" rows="10"></textarea>
+        <div class="col-md-6">
+          <h3>Datos de la Cita</h3>
+          <div class="mb-3">
+            <label for="fecha">Fecha:</label>
+            <input type="text" id="fecha" class="form-control" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="hora">Hora:</label>
+            <input type="text" id="hora" class="form-control" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="sede">Sede:</label>
+            <input type="text" id="sede" class="form-control" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="especialidad">Especialidad:</label>
+            <input type="text" id="especialidad" class="form-control" readonly>
+          </div>
+        </div>
       </div>
     </div>
     <!--Container Main end-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
     <script src="../js/sistema.js" type="text/javascript"></script>
     <script src="../js/sistema2.js" type="text/javascript"></script>
-    <script src="../js/documentacion.js" type="text/javascript"></script>
+    <script src="../js/citasprogramadas.js" type="text/javascript"></script>
 </body>
 </html>
