--- a/pages/sistema.html
+++ b/pages/sistema.html
@@ -37,7 +37,8 @@
                 <div class="nav_list"> 
                   <a href="citas.html" class="nav_link"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">RESERVAR CITAS</span> </a> 
                   <a href="reprogramacion.html" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">REPROGRAMACIÓN</span> </a> 
-                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a> 
+                  <a href="documentacion.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">DOCUMENTACIÓN</span> </a>
+                  <a href="citasprogramadas.html" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">MIS CITAS</span> </a> 
             </div> <a href="../index.html" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">Cerrar Sesión</span> </a>
         </nav>
     </div>
@@ -46,6 +47,7 @@
         <h4 class="h3 pt-3">Bienvenidos al nuevo sistema de DafiSalud, el mejor red de políclinicos donde no tomamos en juego tu salud.</h4>
     </div>
     <!--Container Main end-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
     <script src="../js/sistema.js" type="text/javascript"></script>
     <script src="../js/sistema2.js" type="text/javascript"></script>
 </body>
